--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -31,25 +31,26 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
           node-version: 20
-      - name: Install ESLint
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - name: Install dependencies
         run: |
-          yarn add eslint@8.10.0
-          yarn add @microsoft/eslint-formatter-sarif@2.1.7
-          yarn install
+          pnpm install
+          pnpm add @microsoft/eslint-formatter-sarif
       - name: Run ESLint
         run: npx eslint .
-          --config .eslintrc.json
-          --ext .js,.jsx,.ts,.tsx
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
       - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
