--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -13,10 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Unit Tests
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
           node-version: 20
-          cache: 'yarn'
-      - run: yarn install
-      - run: yarn test:ci
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - run: pnpm install
+      - run: pnpm test:ci
