chore: fix github actions error

--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
       "react": "^19.1.0",
       "react-dom": "^19.1.0",
       "@types/react": "^19.1.0",
-      "@types/react-dom": "^19.1.0"
+      "@types/react-dom": "^19.1.0",
+      "dompurify": "^3.2.4"
     }
   },
   "config": {
