--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -4,6 +4,7 @@ on: [pull_request_target, issues]
 
 jobs:
   greeting:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     permissions:
       issues: write
