--- a/package.json
+++ b/package.json
@@ -14,25 +14,23 @@
     "test": "jest --watch",
     "test:ci": "jest --ci",
     "lint": "eslint .",
-    "prepare": "husky install",
+    "prepare": "husky",
     "precommit": "lint-staged",
     "prettier": "prettier --write .",
     "fmt": "pnpm prettier && pnpm lint",
     "post-update": "echo \"codesandbox preview only, need an update\" && pnpm update --latest",
     "storybook": "cross-env EDITOR=code storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "fb:seed-db": "node ./__seed__/script.js",
-    "fb:seed-db-cloud": "node ./__seed__/script.js SEED_FIREBASE_FIRESTORE_IN_CLOUD",
-    "fb:login": "firebase login",
-    "fb:emu": "firebase emulators:start --import=./__seed__/firebase-seed --project demo-website",
-    "fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed --project demo-website"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@mantine/core": "^7.15.0",
     "@mantine/hooks": "^7.15.0",
     "@mantine/notifications": "^7.15.0",
     "@mantine/spotlight": "^7.15.0",
+    "@microsoft/clarity": "^1.0.2",
     "@next/third-parties": "^16.1.1",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
     "@tabler/icons-react": "^3.28.0",
     "@tiptap/extension-code-block-lowlight": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
@@ -42,25 +40,24 @@
     "@tiptap/starter-kit": "^3.15.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "firebase": "^11.6.1",
     "html-to-image": "^1.11.11",
     "lowlight": "^3.3.0",
     "next": "^16.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.71.1",
+    "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "string-width": "^8.1.0",
+    "string-width": "^7.2.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^5.0.0",
-    "@commitlint/cli": "^20.3.1",
-    "@commitlint/config-conventional": "^20.3.1",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@next/eslint-plugin-next": "^16.1.0",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "10.1.11",
@@ -69,27 +66,29 @@
     "@storybook/react": "^10.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/lodash": "^4.17.23",
-    "@types/node": "^25.0.6",
+    "@types/node": "^22.15.2",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
+    "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-storybook": "10.1.11",
-    "globals": "^17.0.0",
+    "globals": "^16.2.0",
     "husky": "^9.1.7",
     "jest": "^29.4.3",
-    "jest-environment-jsdom": "^30.2.0",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^16.2.7",
+    "lint-staged": "^15.2.9",
     "lodash": "^4.17.21",
     "next-sitemap": "^4.1.8",
     "prettier": "^3.0.3",
     "storybook": "10.1.11",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.53.0",
+    "typescript-eslint": "^8.32.0",
     "vite": "^7.0.0"
   },
   "pnpm": {
