--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "lint-staged": "^15.2.9",
     "lodash": "^4.17.21",
     "next-sitemap": "^4.1.8",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
     "storybook": "10.1.11",
     "typescript": "^5.7.2",
