--- a/package.json
+++ b/package.json
@@ -111,7 +111,11 @@
       "@types/react-dom": "^19.1.0",
       "dompurify": "^3.2.4",
       "tmp": "^0.2.4"
-    }
+    },
+    "ignoredBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
   },
   "config": {
     "commitizen": {
